test/corpus/basics.txt
==================
Let block with typed declarations
==================

@let
  age int = 30
  name string
  gender = "f"
  alive = true
  progress float
@end

---

(source_file
  (empty)
  (let_block
    (declaration
      (variable_name
        (identifier))
      (type)
      (simple_value
        (number)))
    (declaration
      (variable_name
        (identifier))
      (type))
    (declaration
      (variable_name
        (identifier))
      (simple_value
        (string)))
    (declaration
      (variable_name
        (identifier))
      (simple_value
        (boolean)))
    (declaration
      (variable_name
        (identifier))
      (type))))

==================
Top matter in any order
==================

--- This is a comment!
@let
  health int = -10 --- negative default
@end

@testbed alpha
  age = 50
  name = "Bob"
@end

@receive subfolder/scene.ska

---

(source_file
  (empty)
  (comment)
  (empty)
  (let_block
    (declaration
      (variable_name
        (identifier))
      (type)
      (simple_value
        (number))
      (comment)))
  (empty)
  (testbed
    (identifier)
    (testbed_declaration
      (variable_name
        (identifier))
      (simple_value
        (number)))
    (testbed_declaration
      (variable_name
        (identifier))
      (simple_value
        (string))))
  (empty)
  (receive
    (module_path)))

==================
Basic block with attributed beat
==================

# start_block

Alice: Hello world

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (attribution)
      (text_content
        (text_fragment)))))

==================
Nested block tags
==================

# parent

A beat.

## child

### grandchild

Deep beat.

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (text_content
        (text_fragment))))
  (empty)
  (block
    (block_tag
      (identifier)))
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (text_content
        (text_fragment)))))

==================
Colons are ignored outside of attributions
==================

# block_tag

Beat text here, as always

char_name: This is attributed.

This one just tests a normal colon usage: we'll see if it works!

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (attribution)
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (text_content
        (text_fragment)))))

==================
Block-level and guarded operations
==================

# ops

:simple()

~ age += 10

(? gender = "m") ~ age += 2

(? going) -> somewhere

EXIT

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (operation_line
      (operation
        (method_call_op
          (method_call
            (identifier)))))
    (empty)
    (operation_line
      (operation
        (mutation_op
          (variable_name
            (identifier))
          (rvalue
            (simple_value
              (number))))))
    (empty)
    (operation_line
      (conditional
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))
              (rvalue
                (simple_value
                  (string)))))))
      (operation
        (mutation_op
          (variable_name
            (identifier))
          (rvalue
            (simple_value
              (number))))))
    (empty)
    (operation_line
      (conditional
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))))))
      (operation
        (move_op
          (move_target
            (move_path
              (identifier))))))
    (empty)
    (operation_line
      (operation
        (exit_op)))))
