test/corpus/beats-insertions.txt
==================
Beats with insertions, ternaries, switches
==================

# test_block

First beat

Second beat with an {injection}.

This one has a normal ternary, and {some_flag ? "yarrrrr!" : "narrrrr."} is the result.

Switch ternary: {pet_type ? [1: "cat", 2: "dog", _: "camel"]}

A beat with an {--- embedded comment} inside -- and a double hyphen.

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (text_content
        (text_fragment)
        (insertion
          (simple_insertion
            (rvalue
              (variable_ref
                (variable_name
                  (identifier))))))
        (text_fragment)))
    (empty)
    (beat
      (text_content
        (text_fragment)
        (insertion
          (ternary_insertion
            (rvalue
              (variable_ref
                (variable_name
                  (identifier))))
            (rvalue
              (simple_value
                (string)))
            (rvalue
              (simple_value
                (string)))))
        (text_fragment)))
    (empty)
    (beat
      (text_content
        (text_fragment)
        (insertion
          (switch_ternary
            (rvalue
              (variable_ref
                (variable_name
                  (identifier))))
            (switch_case
              (rvalue
                (simple_value
                  (number)))
              (rvalue
                (simple_value
                  (string))))
            (switch_case
              (rvalue
                (simple_value
                  (number)))
              (rvalue
                (simple_value
                  (string))))
            (switch_case
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))
              (rvalue
                (simple_value
                  (string))))))))
    (empty)
    (beat
      (text_content
        (text_fragment)
        (inline_comment)
        (text_fragment)
        (text_fragment)))))

==================
Conditional chains
==================

# cond

@if age > 30

I'm over 30!

@elseif age > 10

I'm over 10!

:simple()

@else

I'm 10 or under!

@endif

After the chain.

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (cond_chain
      (if_clause
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))
              (rvalue
                (simple_value
                  (number))))))
        (empty)
        (beat
          (text_content
            (text_fragment))))
      (empty)
      (elseif_clause
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))
              (rvalue
                (simple_value
                  (number))))))
        (empty)
        (beat
          (text_content
            (text_fragment)))
        (empty)
        (operation_line
          (operation
            (method_call_op
              (method_call
                (identifier))))))
      (empty)
      (else_clause
        (empty)
        (beat
          (text_content
            (text_fragment))))
      (empty))
    (empty)
    (beat
      (text_content
        (text_fragment)))))

==================
Conditional beat
==================

# cond

(? show_conditional) A conditional can precede a beat as well.

(? a and (b or c)) Nested condition.

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (conditional
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))))))
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (conditional
        (conditional_expression
          (conditional_clause
            (conditional_atom
              (rvalue
                (variable_ref
                  (variable_name
                    (identifier))))))
          (conditional_clause
            (conditional_expression
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name
                        (identifier))))))
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name
                        (identifier))))))))))
      (text_content
        (text_fragment)))))
