test/corpus/codex.txt
==================
Codex file: methods and globals
==================

--- This is a codex!

@methods
  simple() action
  simple_args(a int, b string) action
  returns_something() int
  returns_w_args(a int, b string) string
@end

@globals
  age int
  name string
  gender = "?"
  alive bool = true
@end

---

(source_file
  (empty)
  (comment)
  (empty)
  (empty)
  (methods_block
    (method_def
      (identifier)
      (method_signature))
    (method_def
      (identifier)
      (arg_def
        (identifier)
        (type))
      (arg_def
        (identifier)
        (type))
      (method_signature))
    (method_def
      (identifier)
      (method_signature
        (type)))
    (method_def
      (identifier)
      (arg_def
        (identifier)
        (type))
      (arg_def
        (identifier)
        (type))
      (method_signature
        (type))))
  (empty)
  (globals_block
    (declaration
      (variable_name
        (identifier))
      (type))
    (declaration
      (variable_name
        (identifier))
      (type))
    (declaration
      (variable_name
        (identifier))
      (simple_value
        (string)))
    (declaration
      (variable_name
        (identifier))
      (type)
      (simple_value
        (boolean)))))
